--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,7 +35,12 @@ services:
       - "${DASHBOARD_PORT}:8080"
       # - "443:443"
 
+
   homepage:
+    # HOMEPAGE DASHBOARD
+    # see https://gethomepage.dev/v0.7.4/configs/docker/#using-socket-directly
+    # for configuring auto sevice dicovery using docker 
+    # both the volume /var/run/docker.sock and the docker.yaml config file need to be set
     image: ghcr.io/gethomepage/homepage:latest
     restart: always
     environment:
