--- a/guide.env
+++ b/guide.env
@@ -3,3 +3,6 @@ EMAIL="email for cert"
 MAIN_PORT="main port for the reverse proxy"
 DASHBOARD_PORT="dashboard port for treafik"
 MAIN_NETWORK="network name for exepose services to traefik"
+HOMEPAGE_HOST="host for the Homepage service"
+MAIN_HOST="the main host"
+DASHBOARD_HOST="the host for serving the traefik dashboard"
