New version Working Unifi Controller Added widgets

--- a/guide.env
+++ b/guide.env
@@ -1,6 +1,7 @@
 # GLOBAL ENV
 EMAIL="email for cert"
 MAIN_PORT="main port for the reverse proxy"
+TLS_PORT="main port for the secure reverse proxy"
 DASHBOARD_PORT="dashboard port for treafik"
 MAIN_NETWORK="network name for exepose services to traefik"
 HOMEPAGE_HOST="host for the Homepage service"
