--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ networks:
 
 volumes:
   homepage-data:
+  traefik_config:
 
 
 name: homelab_main
@@ -21,29 +22,37 @@ services:
       - homelab_net
     command:
       - "--api.insecure=true"
+      - "--log.level=DEBUG"
+      - "--accesslog=true"
       - "--entryPoints.web.address=:80"
-      - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
       - "--entryPoints.websecure.address=:443"
-      # - "--certificatesresolvers.letsencrypt.acme.tlschallenge=true"
-      # - "--certificatesresolvers.letsencrypt.acme.email=${EMAIL}"
-      # - "--certificatesresolvers.letsencrypt.acme.storage=/traefik/acme.json"
+      - "--entrypoints.websecure.http.tls=true"
+      - "--providers.docker=true"
+      - "--serversTransport.insecureSkipVerify=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--providers.file.filename=/configuration/traefik.yaml"
+      - "--providers.file.watch=true"
     volumes:
+      - "traefik_config:/configuration"
       - "/var/run/docker.sock:/var/run/docker.sock"
     labels:
-      - homepage.group=Administation
+      # ----------- HOMEPAGE LABELS ----------
+      - homepage.group=Administration
       - homepage.name=Traefik Dashboard
-      - homepage.href=http://${DASHBOARD_HOST}
+      - homepage.href=https://${DASHBOARD_HOST}
       - homepage.icon=traefik
+      - homepage.widget.type=traefik
+      - homepage.widget.url=https://${DASHBOARD_HOST}
 
+      # ----------- TRAEFIK LABELS ----------
       - "traefik.enable=true"
-      - "traefik.http.routers.dashboard-http.entrypoints=web"
+      - "traefik.http.routers.dashboard-http.entrypoints=websecure"
       - "traefik.http.routers.dashboard-http.rule=Host(`${DASHBOARD_HOST}`)"
       - "traefik.http.services.dashboard-http.loadbalancer.server.port=8080"
     ports:
       - "${MAIN_PORT}:80"
-      - "${DASHBOARD_PORT}:8080"
-      # - "443:443"
+      - "${TLS_PORT}:443"
+      # - "${DASHBOARD_PORT}:8080"
 
 
   homepage:
@@ -58,9 +67,10 @@ services:
     labels:
       # -------------- TRAEFIK LABELS ---------
       - "traefik.enable=true"
-      - "traefik.http.routers.homepage-http.entrypoints=web"
+      - "traefik.http.routers.homepage-http.entrypoints=websecure"
       - "traefik.http.routers.homepage-http.rule=Host(`${HOMEPAGE_HOST}`)"
       - "traefik.http.services.homepage-http.loadbalancer.server.port=3000"
+      - "traefik.http.routers.homepage-http.tls=true"
     volumes:
       - homepage-data:/app/config # Make sure your local config directory exists
       - /var/run/docker.sock:/var/run/docker.sock # (optional) For docker integrations
