--- a/paperless-ngx/guide.env
+++ b/paperless-ngx/guide.env
@@ -1,3 +1,11 @@
+--- .env
+PAPERLESS_HOST=host
+# PAPERLESS_TOKEN=token
+PAPERLESS_USER=user
+PAPERLESS_PASS=pass
+
+--- .env.paperless
+
 # The UID and GID of the user used to run paperless in the container. Set this
 # to your UID and GID on the host so that you have write access to the
 # consumption directory.
@@ -24,7 +32,7 @@
 
 # This is required if you will be exposing Paperless-ngx on a public domain
 # (if doing so please consider security measures such as reverse proxy)
-# PAPERLESS_URL=https://paperless.example.com
+PAPERLESS_URL=https://paperless.example.com
 
 # Adjust this key if you plan to make paperless available publicly. It should
 # be a very long sequence of random characters. You don't need to remember it.
