--- a/guide.env
+++ b/guide.env
@@ -7,3 +7,8 @@ MAIN_NETWORK="network name for exepose services to traefik"
 HOMEPAGE_HOST="host for the Homepage service"
 MAIN_HOST="the main host"
 DASHBOARD_HOST="the host for serving the traefik dashboard"
+
+# HOMEPAGE GROUPS
+HOMEPAGE_GROUP_FILES=Files
+HOMEPAGE_GROUP_OFFICE=Office
+HOMEPAGE_GROUP_ADMINISTRATION=Administration
