--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,7 +37,7 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock"
     labels:
       # ----------- HOMEPAGE LABELS ----------
-      - homepage.group=Administration
+      - homepage.group=${HOMEPAGE_GROUP_ADMINISTRATION}
       - homepage.name=Traefik Dashboard
       - homepage.href=https://${DASHBOARD_HOST}
       - homepage.icon=traefik
@@ -48,6 +48,7 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.dashboard-http.entrypoints=websecure"
       - "traefik.http.routers.dashboard-http.rule=Host(`${DASHBOARD_HOST}`)"
+      - "traefik.http.routers.dashboard-http.tls=true"
       - "traefik.http.services.dashboard-http.loadbalancer.server.port=8080"
     ports:
       - "${MAIN_PORT}:80"
