--- a/paperless-ngx/docker-compose.yaml
+++ b/paperless-ngx/docker-compose.yaml
@@ -66,8 +66,8 @@ services:
       - data:/usr/src/paperless/data
       - media:/usr/src/paperless/media
       # Controllare come migliorare questi 2 campi
-      - ./export:/usr/src/paperless/export
-      - ./consume:/usr/src/paperless/consume
+      # - ./export:/usr/src/paperless/export
+      # - ./consume:/usr/src/paperless/consume
     env_file: .env.paperless
     labels:
       # -------------- TRAEFIK LABELS ---------
@@ -75,8 +75,9 @@ services:
       - "traefik.http.routers.paperless-http.entrypoints=websecure"
       - "traefik.http.routers.paperless-http.rule=Host(`${PAPERLESS_HOST}`)"
       - "traefik.http.services.paperless-service.loadbalancer.server.port=8000"
+      - "traefik.http.routers.paperless-http.tls=true"
       # -------------- HOMEPAGE LABELS ---------
-      - homepage.group=Office
+      - homepage.group=${HOMEPAGE_GROUP_OFFICE}
       - homepage.name=Paperless
       - homepage.href=https://${PAPERLESS_HOST}
       - homepage.icon=paperless
