--- a/guide.env
+++ b/guide.env
@@ -12,3 +12,4 @@ DASHBOARD_HOST="the host for serving the traefik dashboard"
 HOMEPAGE_GROUP_FILES=Files
 HOMEPAGE_GROUP_OFFICE=Office
 HOMEPAGE_GROUP_ADMINISTRATION=Administration
+HOMEPAGE_GROUP_TOOLS=Tools
