--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
   traefik:
     image: traefik:v2.9
     restart: always
+    container_name: traefik
     env_file:
       - .env
     networks:
