--- a/changedetection/docker-compose.yaml
+++ b/changedetection/docker-compose.yaml
@@ -36,6 +36,7 @@ services:
       - "traefik.http.routers.changedetection-http.rule=Host(`${CHANGEDETECTION_HOST}`)"
       - "traefik.http.services.changedetection-service.loadbalancer.server.port=${PORT}"
       - "traefik.http.routers.changedetection-http.tls=true"
+      - "traefik.http.routers.changedetection-http.middlewares=error-pages-middleware"
       - "traefik.docker.network=${MAIN_NETWORK}"
       # -------------- HOMEPAGE LABELS ---------
       - homepage.group=${HOMEPAGE_GROUP_TOOLS}
